# aed1-tp01

./: .gitignore  00. generales.tex  01. esEncuestaValida.tex  02. histHabitacional.tex  03. laCasaEstaQuedandoChica.tex  04. creceElTeleworkingEnCiudadesGrandes.tex  05. costoSubsidioMejora.tex  06. generarJoin.tex  07. ordenarRegionYTipo.tex  08. muestraHomogenea.tex  09. corregirRegion.tex  10. histogramaDeAnillosConcentricos.tex  11. quitarIndividuos.tex  7. ordenarRegionYTipo.tex  8. muestraHomogenea.tex  Ej 4.3.tex  Ejercicio1.tex  Ejercicios4y5.tex  TPE-p2.slspec  algo1-TP1.aux  algo1-TP1.fdb_latexmk  algo1-TP1.fls  algo1-TP1.tex  main.aux  main.fdb_latexmk  main.fls  main.tex  solucion.aux  solucion.fdb_latexmk  solucion.fls  solucion.tex  solucionV3.tex
.old/: Ej 4.2.tex  esbozo.txt
TPE/: 06. generarJoin.tex  (+5 more)
TPI/: CMakeLists.txt  README.txt  auxiliares.cpp  auxiliares.h  auxiliares.tpp  ejercicios.cpp  ejercicios.h  tablaHogares.cpp  tablaHogares.h
TPI/ejercicios/: corregirRegion.cpp  costoSubsidioMejora.cpp  creceElTeleworkingEnCiudadesGrandes.cpp  ejercicios_individuales.h  esEncuestaValida.cpp  generarJoin.cpp  histHabitacional.cpp  histogramaDeAnillosConcentricos.cpp  laCasaEstaQuedandoChica.cpp  muestraHomogenea.cpp  ordenarRegionYCODUSU.cpp  quitarIndividuos.cpp
TPI/test/: creceElTeleworkingEnCiudadesGrandesTEST.cpp  esEncuestaValidaTEST.cpp  generarJoinTEST.cpp  histHabitacionalTEST.cpp  histogramaDeAnillosConcentricosTEST.cpp  laCasaEstaQuedandoChicaTEST.cpp  muestraHomogeneaTEST.cpp  ordenarRegionYCODUSUTEST.cpp  quitarIndividuosTEST.cpp
(+9 files in other folders)
